// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoItem match its snapshot - complete 1`] = `
<li
  className="complete"
>
  Not Complete
</li>
`;

exports[`TodoItem match its snapshot - not complete 1`] = `
<li
  className=""
>
  Not Complete
</li>
`;
